@startuml

title __DEMONIOS's Class Diagram__\n

  namespace Demonios {
    abstract class Demonios.Demonio {
        # almasCazadas : List<Alma>
        - almasAtormentadas : List<Alma>
        - nivelMaldad : int
        + Demonio()
        + atormentar()
        + atormentarAlma()
        {abstract} + atormentarSegunDemonio()
        + cantidadAlmasAtormentadas()
        + cantidadAlmasCazadas()
        {abstract} + cazar()
        + cazarAlma()
        + cazarAlmas()
        + dobleDeAlmasCazadas()
        + getAlmasAtormentadas()
        + getAlmasCazadas()
        + getNivelMaldad()
        + nivelDeMaldadParaCazar()
        + toString()
    }
  }
  

  namespace Demonios {
    class Demonios.DemonioFuego {
        + DemonioFuego()
        + atormentarSegunDemonio()
        + cazar()
        + getAlmasCazadas()
        + toString()
    }
  }
  

  namespace Demonios {
    class Demonios.DemonioHielo {
        + DemonioHielo()
        + atormentarSegunDemonio()
        + cazar()
        + toString()
    }
  }
  

  namespace Demonios {
    class Demonios.DemonioSombra {
        + DemonioSombra()
        + atormentarSegunDemonio()
        + cazar()
        + toString()
    }
  }
  

  Demonios.DemonioFuego -up-|> Demonios.Demonio
  Demonios.DemonioFuego o-- ar.edu.unahur.obj2.Alma : alma
  Demonios.DemonioHielo -up-|> Demonios.Demonio
  Demonios.DemonioHielo o-- ar.edu.unahur.obj2.Alma : alma
  Demonios.DemonioSombra -up-|> Demonios.Demonio
  Demonios.DemonioSombra o-- ar.edu.unahur.obj2.Alma : alma


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
